app/assets/stylesheets/generics.scss
@import "colors";
.bm-input{
  display: block;
  margin-left: 12%;
  font-size: 17px;
  width: 75%;
  height: 35px;
}

.bm-label {
  text-align: center;
  display: block;
}

.bm-title {
  margin-bottom: 10px;
  text-align: center;
}

.dropdown {
    position: relative;
    display: inline-block;
}

.dropdown-content {
    display: none;
    position: absolute;
    background-color: #f9f9f9;
    min-width: 160px;
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
    padding: 12px 16px;
}

.dropdown:hover .dropdown-content {
    display: block;
}

.model-panel {
   position: absolute;
   display: flex;
   left: 15%;
   top: 20%;
   background-color: $grey;
   width: 70%;
 }

.model-create {
  display: inline-block;
  width: 25%;
}

.model-container {
  display: inline-block;
  width: 73%;
}

.model-row {
  height: 10%;
  label {
    font-size: 17px;
  }
  &:hover {
    background-color: #F2F2F2;
  }
}

.model-header-container {
  margin-bottom: 2%;
  padding-left: 0;
  border-bottom: 1px solid #ddd;
  list-style: none;
  position:relative;
}

.cell-large {
  width: 33%;
}

.cell-small {
  width: 17%;
}

.cell-tiny {
  width: 10%;
}

.header {
  display: inline-block;
}

.number-row {
  text-align: center;
}

